<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_weather"
    android:background="@color/colorMain"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorScreenBackground"
        android:elevation="10dp"
        app:title="@string/app_name"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/colorScreenBackground"
            app:boxStrokeColor="@color/colorScreenBackground"
            android:hint="@string/search_city">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_name"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/imgSearch"
            android:layout_width="wrap_content"
            android:layout_marginStart="-40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/search"
            android:contentDescription="@string/search_image" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:id="@+id/weather_main"
        tools:context=".activities.MainActivity">
        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Texas"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/todayTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/temp"
            android:textColor="@android:color/black"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/todayDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todayTemperature"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="No data"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/temp_high_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todayDescription"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="Thu 27/32"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/imageViewWeather"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:tint="@color/colorScreenBackground"
            android:src="@drawable/rain"
            android:contentDescription="@string/weather_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.966"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.151" />

    </RelativeLayout>
    <ScrollView
        android:id="@+id/data_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/temp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorWeatherCard">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/thermometer"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/colortitleText"
                android:layout_marginStart="10dp"
                android:textSize="11sp"
                android:text="@string/feels_like"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_temp_feels_like"
                    android:textAlignment="textStart"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="32 "/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wind"
            android:layout_weight="1"
            android:elevation="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorWeatherCard">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/wind"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAlignment="textStart"
                    android:layout_marginStart="10dp"
                    android:textSize="11sp"
                    android:textColor="@color/colortitleText"
                    android:text="SE wind"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:id="@+id/tv_wind"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:text="32 km/h"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_5dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/humidity"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorWeatherCard">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/humidity"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/colortitleText"
                    android:layout_marginStart="10dp"
                    android:textSize="11sp"
                    android:text="@string/humidity"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:id="@+id/tv_humidity"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:textSize="20sp"
                    android:text="32 "/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pressure"
            android:layout_weight="1"
            android:elevation="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorWeatherCard">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/air"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAlignment="textStart"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colortitleText"
                    android:textSize="11sp"
                    android:text="@string/air_pressure"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_pressure"
                    android:textAlignment="textStart"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="32 "/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_5dp"
        android:visibility="visible"
        android:weightSum="2">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/visibility"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorWeatherCard">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/witness"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAlignment="textStart"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colortitleText"
                    android:textSize="11sp"
                    android:text="@string/visibility"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:layout_marginStart="10dp"
                    android:id="@+id/tv_visibility"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:textSize="20sp"
                    android:text="32 "/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sun_rise_set"
        android:elevation="10dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorWeatherCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/sunrise"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="textStart"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:textColor="@color/colortitleText"
                android:text="@string/sunrise"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginStart="10dp"
                android:id="@+id/sun_rise"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="32 km/h"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="end"
                    android:src="@drawable/sunset"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="10dp"
                    android:textSize="12sp"
                    android:textColor="@color/colortitleText"
                    android:text="@string/sunset"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:id="@+id/sun_set"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="32 km/h"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
    </LinearLayout>

</layout>